# H3Demos

./: README.md
SmartOven/lvdsAC69t88a/legato_smartOven/smartOven_9x75_curiosity_ac69t88a.X/: mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  (+1 more)
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/: CMakeLists.txt
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/app/: app.c  app.h  appScreen.c  configuration.h  definitions.h  device.h  main.c  toolchain_specifics.h
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/gfx/canvas/: gfx_canvas.c  gfx_canvas.h
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/gfx/simulator/: gfx_simulator.c  gfx_simulator.h
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/system/input/: sys_input.c
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/system/int/: sys_int.h  sys_int_mapping.h
SmartOven/nvdi/legato_smartOven/src/config/default/default/src/system/int/src/: sys_int.c
USB_CanvasDisplay/EdgeAI_Controller/EdgeAI_Controller_SAM9x75Cur.X/: EdgeAI_Controller_SAM9x75Cur.mc3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
USB_CanvasDisplay/EdgeAI_Controller/src/: app.c  app.h  main.c
legato_thermostatRound/firmware/src/: app.c  app.h  app2Butts.c
legato_thermostatRound/firmware/thermo_9x75_cur_ws4in_r.X/: mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  thermo_9x75_cur_ws4in_r.mc3
legato_thermostatRound/firmware/thermo_9x75_curiosity_ws4in_r.X/: thermo_9x75_curiosity_ws4in_r.mc3
(+157 files in other folders)
